--- a/html/002. Yakin (05-04-2024)/yakin.html
+++ b/html/002. Yakin (05-04-2024)/yakin.html
@@ -119,6 +119,10 @@
                 ngapain takut dan ragu gitu loh (setidaknya anggap aja begitu, 
                 yekan wkwkwk).
             </p>
+            <p>
+                Udah subuh ni, mandi dulu deh biar seger. Btw, hari ini 
+                aku mau pulang kampung, yeayy.
+            </p>
         </div>
     </div>
 </body>
