--- a/html/002. Yakin (05-04-2024)/yakin.html
+++ b/html/002. Yakin (05-04-2024)/yakin.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container theme5">
         <div class="video-section">
-            <video src="about-it.mp4" autoplay controls loop></video>
+            <video src="me.mp4" autoplay controls loop></video>
         </div>
         <div class="text-section text-black">
             <h1>Intinya jangan ragu</h1>
@@ -104,7 +104,7 @@
                 ke dalam ruangan, mau ngetok tapi agak ragu (hmmm ngapain 
                 ragu sih), terus aku kayak ngomong ke si yang satunya, 
                 "Heh kamu cowok, ketok lah pintunya" hahaha. Tapi ngga 
-                diketok-ketoi woi, ngeselin amat, katanya "nunggu momentum."
+                diketok-ketok woi, ngeselin amat, katanya "nunggu momentum."
                 Momentum apaan, ntar keburu dosennya pergi. Akhirnya karena 
                 udah ngga sanggup nunggu lagi, aku mutusin buat mau masuk ajalah
                 ngetok pintu. Akhirnya dia yang ngetok duluan karena posisinya 
