--- a/html/003. Sipaling ACC (05-04-2024)/sipaling-acc.html
+++ b/html/003. Sipaling ACC (05-04-2024)/sipaling-acc.html
@@ -12,7 +12,7 @@
             <video src="kampus-dayli.mp4" autoplay controls loop></video>
         </div>
         <div class="text-section text-black">
-            <h1>Intinya jangan ragu</h1>
+            <h1>Penunggu Kampus</h1>
             <p class="date">
                 23.24, Friday, 05/04/2024
             </p>
@@ -31,6 +31,20 @@
             <p>
                 Pak ACC pak, buk ACC buk, wkwkwk.
                 Ya Allah, ACC kan aja ini ya Allah. 
+            </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Btw, lulus ini aku mau ngapain ya? Bingung ngga sih. 
+                Gimana menurut kamu? Apa daftar cpns? Atau kayak 
+                saran abangku lanjut S2 dulu? Atau aku fokus di 
+                dunia programming dan ngembangin usaha app android? 
+                Atau aku fokus di website aja? Aduhh bingung euy. 
+                Atauu, atau apa ya? Ahh pusing juga, ntar deh aku 
+                rancangin lagi rencana masa depan itu, yang pasti 
+                sekarang aku kejar adalah, "pak ACC pak, buk ACC buk."
+                Iya nisa, ini aja dulu, biar aku ngga gila, wkwkwk.
             </p>
         </div>
     </div>
