--- a/html/003. Sipaling ACC (05-04-2024)/sipaling-acc.html
+++ b/html/003. Sipaling ACC (05-04-2024)/sipaling-acc.html
@@ -46,6 +46,31 @@
                 sekarang aku kejar adalah, "pak ACC pak, buk ACC buk."
                 Iya nisa, ini aja dulu, biar aku ngga gila, wkwkwk.
             </p>
+            <p>
+                Ahh, gimana mau ACC, ini revisinya aja aku bingung 
+                banget mau dibuat gimana lagi. Kenapa sih dosen 
+                penguji banyak amat requestnya, bikin pusing tau 
+                bapak-bapak yth.
+            </p>
+            <p>
+                Mana aku makin dibuat bingung sama maksud-maksudnya, 
+                arghhh. Nih ya, aku list deh,
+                1. Pas sempro disuruh tambahin validasi data,
+                aku jadi kepikiran buat gunain timeseriessplit 
+                aja yang notabene emang ribet 6 kali lipat daripada 
+                splitting biasa. Nahh, pas semhasnya diminta jelasin 
+                lah splitting dataku gimana, udah aku jelasin metode 
+                itu dengan segala keribetannya, rupanya yang penguji
+                itu maksud cuman kayak splitting data biasa aja, tapi 
+                menggunakan data yang belum pernah dilihat model. Tau 
+                gitu splitting biasa aja biar ngga ribet.
+                2. Ahhh masih panjang, lelah mengetik, udah cukup 
+                deh, aku tidur dulu.
+
+                "Haduh, jangan sampai langkah revisi yang aku pilih 
+                makin meribetkan dirikuu lagiii. Harus lebih kritisi
+                ya nisaa."
+            </p>
         </div>
     </div>
 </body>
