--- a/html/005. Lets merevisi (11-04-2024)/revisiann.html
+++ b/html/005. Lets merevisi (11-04-2024)/revisiann.html
@@ -95,8 +95,8 @@
                 dan orang-orang pada wajib ngumpul disini semua wkwkwk.
                 Kadang mereka datengnya barengan satu pickup full dari 
                 rombongan tanjong dan satu pickup full dari rombongan 
-                Matang Bugak, jadilah penuh rumahku penuh. Dan yang 
-                pasti, kami yang 'aneuk dara' rumah bikin minum berlusin-lusin 
+                Matang Bugak, jadilah rumahku penuh. Dan yang pasti, 
+                kami yang 'aneuk dara' rumah bikin minum berlusin-lusin 
                 gelas udah kayak hajatan, wkwkwk.
             </p>
             <p>
