--- a/html/008. Keberuntungankah (01-05-2024)/keberuntungankah.html
+++ b/html/008. Keberuntungankah (01-05-2024)/keberuntungankah.html
@@ -58,7 +58,57 @@
            </p>
            <p>
                 Aku belum cerita waktu kejadian sempro yah, wkwkwk.
+                Jadi, pas sempro kemaren aku paling akhir, karena belum 
+                lengkap dosen. Terus ya karena udah sore juga mungkin, 
+                jadinya pertanyaannya ngga banyak. Cuman ditanya,  <br>
+                * dosen Penguji 1
+                - Splitting data kamu gimana?
+                Berurutan pak, menggunakan rasio 7:3. 
+                - Urutannya gimana? Ascending atau descending?
+                - Datanya dari web ya? Perusahaan apa?
+                - Perjelas sumber data kamu (padahal udah terpampang 
+                nyata di bab 3 loh pak)
+                Tapi aku jawab aja, "iya, baik pak." Cari aman wkwkwk. <br>
                 
+                * dosen Penguji 2
+                - Perusahaannya apa? 
+                Unilever pak.
+                - Periodenya?
+                Januari 2020 sampai Desember 2023, pak.
+                - Jadi perusahaannya cuman 1? 
+                Iya pak. 
+                - Ohh, ngga bisa gitu, tambah perusahaannya lagi, minimal 10 
+                perusahaan.
+                Terus buk za*a nyaut, "Berarti tambah perusahaannya ya pak?"
+                buat mastiin. Abis itu dia ngomong ke aku, "Iya tambah aja 
+                perusahaannya."
+                Dan saat itu sesuai tebakan kamu, aku hanya bisa pasrah, hmmm.
+           </p>
+           <p>
+                WHAT? HEI HEI HEI! Dari 1 perusahaan diminta jadi 10?
+                Sepuluh kali lipat jumlah data yang udah aku ajuin di 
+                proposal? Hah? The real shick shack shock moments.
+                Dataku itu total 4 tahun (2020-2023), jumlah datanya 
+                900 baris lebih, udah mendekati 1000 data.
+           </p>
+           <p>
+                Mana aku belum kepikiran kalo nambah data, nanti buat 
+                di hasil penelitian bab 4 nya gimana. Jadilah makin 
+                pusing kan saat itu, wkwkwk. Tapi ya, aku terselamatkan 
+                dengan aplikasi yang udah aku buat, karena memang bisa 
+                untuk nampung banyak data.
+           </p>
+           <p>
+                Dan pas semhas, penguji 2 ku yang minta tambah data
+                itu di ganti, kocak. Teruntuk penguji 2 ku yang lama, 
+                "Sorry pak, I'll play no games. Anda minta 10, saya 
+                kasih 16, wkwkwk." Yah, kan datanya tinggal download 
+                aja di yahoo-finance, wkwkwk. Mau diminta 50 kali 
+                lipat pun masih gampang buat saya, hahahaha.
+                Alhamdulillah.
+           </p>
+           <p>
+                Dahlah, tidur dulu.
            </p>
         </div>
     </div>
