--- a/html/009. Tolong-menolong (02-05-2024)/tolong-menolong.html
+++ b/html/009. Tolong-menolong (02-05-2024)/tolong-menolong.html
@@ -30,6 +30,25 @@
             </p>
             <p>
                 Jaadiii, aku udah di ACC sidang, hehehe. Alhamdulillah.
+                Aku juga udah daftar barusan.
+            </p>
+            <p>
+                Dari judul file ini, aku bahas tentang Tolong-menolong.
+                Ngga jadi lah ya. Kalo di bahas jadinya panjaaangg 
+                banget, kapan-kapan aja.
+            </p>
+            <p>
+                Btw besok aku mau pulang kampung. Kapan balik lagi nisa?
+                Belum tau. Mungkin kalo udah di share jadwal sidang 
+                nanti aku balek, sekalian buat ngejilid skripsi sisanya 
+                6 lagi karena 2 udah, terus buat nyebar undangan sidang.
+                Abis itu, siap sidang aku distribusi, ngurus ijazah,
+                dan langsung pulang ke rumah lagi. Mungkin nanti balik 
+                lagi ke dayah pas dekat libur haji, biar sekalian minta 
+                izin panjang sama ummi, tgk anwar, dan gure lain.
+            </p>
+            <p>
+                Manusia berencana, Allah menentukan. Insya Allah.
             </p>
         </div>
     </div>
