--- a/html/013. Hmm (16-05-2024)/hm.html
+++ b/html/013. Hmm (16-05-2024)/hm.html
@@ -21,6 +21,27 @@
                 temen ngobrol wkwkwk. Ahhhh ngeselin amat. Lagian 
                 kenapa sih, ahhh.
             </p>
+            <p>
+                Beneran ngga mood banget, ahhh ngga enak. Skripsiku 
+                udah beres, udah di jilid juga, tinggal nunggu 
+                jadwal. Jadinya aku makin pusing, "Aku mau ngapain 
+                lagiii?" 
+            </p>
+            <p>
+                Ini semua gara-gara, ahhh ngga jadi.
+                Ini semua gara-gara, ngga jadi, ngga jadi.
+            </p>
+            <p>
+                Aku kan tadi siang mau ke kampus, sempronya kawan.
+                Terus aku rencananya mau make kerudung coksu + baju 
+                hitam kan, terus pas aku coba dan ngaca jelek banget.
+                Jadinya aku ngga jadi pake itu. Kemaren niatnya mau 
+                coksu + putih, tapi ngga tau kenapa tadi malah nyoba 
+                item. 
+            </p>
+            <p>
+                Terus, ahhhh, ngga usah lanjut deh.
+            </p>
         </div>
     </div>
 </body>
