--- a/html/013. Hmm (16-05-2024)/hm.html
+++ b/html/013. Hmm (16-05-2024)/hm.html
@@ -42,6 +42,48 @@
             <p>
                 Terus, ahhhh, ngga usah lanjut deh.
             </p>
+            <p>
+                Terus karena ngga cocok, dan kalo dipikir-pikir aku 
+                udah pake kemaen keruding coksu itu, jadilah aku 
+                ganti pake item + abu-abu.
+            </p>
+            <P>
+                Jadinya jelek banget woii, hmmm. Aku foto sama temenku 
+                jadinya jelek banget. Ahhh, aku kayaknya ngga bisa 
+                pake kerudung item lagi deh, jadinya jelek banget. 
+                Sebenernya bukan kerudungnya sih yang jelek, akunya 
+                jelek, mana gendut, duhhh aku ngga suka. Tapi aku 
+                juga ngga suka kurus banget, tapi aku ngga mau gendut,
+                tapi kalopun dibilang gendut aku ngga gendut-gendut 
+                amat ngga sih.
+            </P>
+            <p>
+                Ahhhh bikin ngga mood aja, ini semua gara-gara fotonya 
+                jelek. Apa orang-orang ngeliat aku jelek banget ya? 
+                Kayak, "Ihh jelek banget tu cewek, ngga ada rapi-rapinya."
+                Apa gitu ya? Mana baju aku kusut, akunya duduk. Apa tiap 
+                duduk-duduk seharian bajuku yang udah ku setrika jadi kusut?
+                Dan aku keliatan kucel ya? Aku jelek banget ngga sih 
+                di depan orang-orang? Tapi kadang yah aku ngerasa aku 
+                ngga jelek-jelek amat loh. Tapi apa aslinya aku emang 
+                jelek diliat orang? Ahhh sulit dipercaya aku jelek. 
+                Apa iya ya, aku aneh dan jelek?
+            </p>
+            <p>
+                Ahhhh, ngapain aku peduli ya? Aku jelek di mata orang
+                ya bodoamat.
+                Tapi kok bodoamat, masak aku jelek dan aku bodoamat?
+            </p>
+            <p>
+                Terus aku harus ngga pain dong? "Ya Allah, apakah benar
+                bahwa hamba jelek? Lalu mengapa sebagai makhluk-Mu 
+                hamba jelek?" Tapi Allah ngga pernah nyiptain yang 
+                jelek kan? Dan ada yang pernah bilang ke aku, menghina 
+                ciptaan-Nya itu seperti menghina penciptanya.
+            </p>
+            <p>
+                Ahhhhhhhhhhhhhhhhhhhhhhhhhhhh.
+            </p>
         </div>
     </div>
 </body>
