--- a/html/013. Hmm (16-05-2024)/hm.html
+++ b/html/013. Hmm (16-05-2024)/hm.html
@@ -84,6 +84,18 @@
             <p>
                 Ahhhhhhhhhhhhhhhhhhhhhhhhhhhh.
             </p>
+            <p>
+                Ahhh, aku ngga bisa ilangin pikiran. Masak aku jelek 
+                tambah lagi aku oon. Kenapa ya aku harus jelek dan 
+                oon banget. Tapi ngga ada orang yang ngingetin aku, 
+                atau sekedar menyadarkan bahwa aku jelek dan oon, 
+                mungkin orang juga ngga tega kali ya bilang langsung.
+                Tapi sulit dipercaya ngga sih kalo sebenrnya aku ini 
+                jelek? Dan masak aku oon sih? Tapi apa kenyataannya 
+                emang aku jelek ya? Aduuh kok aku jelek, ahhh. Dan 
+                aku oon juga gitu? LENGKAP SUDAH PENDERITAAN INI. 
+                Ahhh, aku mau tidur ajalah. 
+            </p>
         </div>
     </div>
 </body>
