--- a/html/014. Agak Laen (17-05-2024)/agak-laen.html
+++ b/html/014. Agak Laen (17-05-2024)/agak-laen.html
@@ -71,6 +71,13 @@
                 aja apa? Ahhhhh, ada lanjutannya. Tapi berat banget mau 
                 lanjut. Gimana dong.
             </p>
+            <p>
+                Ini bener-bener ganggu pikiran aku. Aku butuh temen buat 
+                cerita. Tapi aku ngga berani cerita.
+            </p>
+            <p>
+                
+            </p>
         </div>
     </div>
 </body>
