--- a/html/014. Agak Laen (17-05-2024)/agak-laen.html
+++ b/html/014. Agak Laen (17-05-2024)/agak-laen.html
@@ -76,7 +76,104 @@
                 cerita. Tapi aku ngga berani cerita.
             </p>
             <p>
-                
+                Aku ke gedung kami buat anterin HDMI itu, dan disitu aku 
+                ketemu temen dayah aku itu. Dari jauh kan udah keliatan 
+                ada mereka tuh, aku ngomong dalam hati, "Ahh tau gitu 
+                aku nitip aja biar ngga capek ke kampus bolak-balik."
+            </p>
+            <p>
+                Disitu ada 3 orang, pi*ah, kawan aku yang ini, dan ada 
+                satu temen cowoknya (temennya ini nanti kita bahas, kalo 
+                sempat ya).
+            </p>
+            <p>
+                Terus temen dayah aku ini, senyum-senyum woi, aku salfok 
+                banget. Mau ngomong, "Ehh lu ngapain senyum woiii."
+                Sulit dipercaya, aku kesal melihat orang senyum. Aku 
+                langsung ngasih HDMI nya ke pi*ah dan langsung pamit, 
+                aku ngga bisa disitu lama-lama. Bisa kacau kejadiannya 
+                nanti.
+            </p>
+            <p>
+                Sulit dipercaya, aku salting gara-gara ngeliat dia 
+                senyum. Apa aku emang suka banget sama dia ya? Ngga
+                mungkin, ini pasti ngga mungkin. Tapi aneh tau, apa 
+                iya ya? Apa aku beneran suka dan se tergila-gila itu 
+                sama dia, sampai hari ini? Atau ini gara-gara aku stres
+                aja, makanya aku jadi gila begini?
+            </p>
+            <p>
+                Aku jadi alay lagi, ini beneran sulit dipercaya. Aku 
+                udah gila kayaknya. Apa iya gitu ya? Aku suka banget 
+                gitu? Aneh ngga sih. Yang ngeselinnya itu, ngapain 
+                dia muncul di depan aku. Emang ya, zan, zan, zancok 
+                ngeselin banget. Astaghfirullah.
+            </p>
+            <p>
+                Emang ngeselin banget zancok, aku tuh takut banget 
+                aku suka dia lagi. Ini bener-bener zancok. Arghhhh.
+                Apa iya ya, aku suka banget sama zancok itu? 
+                Apa quotes tiktok itu bener ya? "Ada orang yang 
+                selalu punya ruang tersendiri di hati kita. Dan 
+                walapun setelahnya kita sama orang lain, ataupun 
+                kita udah ngga pernah ketemu lagi sama dia, dia 
+                tetap punya ruang khusus di hati kita."
+            </p>
+            <p>
+                Apa itu yang aku rasain ya? Tapi ngga mungkin, ini 
+                terlalu gila, ngga mungkin. Tapi kalo iya, apa bener 
+                zancok emang punya ruang tersendiri? Ahhh, ngga ngga 
+                ngga, ini ngga bisa. Aku harus segera kabur, aku
+                harus segera sidang, terus pulang. Aku bisa gila 
+                kalo disini terus. Mohon kepada bapak ibuk dosen, 
+                SHARE JADWAL SIDANG SAYA, SEKARANG JUGA! Sebelum 
+                aku beneran jadi gila disini.
+            </p>
+            <p>
+                Tapi apa iya ya, sesusah itu buat lupain orang?
+                Dan aku ngga akan pernah bisa lupain zancok? 
+                Tapi kenapa diantara sekian banyak orang, harus 
+                zancok? Kenapa ngga yang lain aja. Ahhhh zancok, 
+                aku mau ngomong sama kamu, "kamu bener-bener 
+                zancok di hati aku." 
+            </p>
+            <p>
+                Emang kacau kamu zancok. Tapi wkwkwkw, kenapa 
+                malah jadi zancok sih, diantara sekian banyak 
+                nama panggilan, hahaha bodoamat lah.
+            </p>
+            <p>
+                Tapi zancok kayaknya ngga cocok ngga sih sama aku?
+                Mungkin sama sa*ri, i*tan, atau siapalah itu, i*za 
+                kek, atau temen kkn dia yang cantik, lupa namanya.
+            </p>
+            <p>
+                Tapi aku ngapain mikirin zancok, mana ini file ini 
+                isinya zancok, zancok, zancok lagi. Arghhh, 
+                kenapa sih kayak susah banget untuk menjadikan, 
+                "Zancok adalah teman." Kenapa aku ngga bisa temenan 
+                kayak biasa aja woii? Kayak temen-temenku yang lain,
+                biasa aja.
+            </p>
+            <p>
+                Lagian, aku sengaja udah ngga follow-followan dan 
+                ngga save zancok lagi. Tapi kenapa ya, susah rasanya.
+                Arghhh, zancok, zancok, zancok. Ngeselin banget 
+                ngga sih.
+            </p>
+            <p>
+                Aku harus biasa aja sih, passwordnya itu, "Zancok
+                adalah teman, zancok adalah teman, zancok adalah 
+                teman."
+            </p>
+            <p>
+                Ini kalo zancok liat ini, bisa serangan jantung 
+                dan mati mendadak aku. Apa ngga usah aku push
+                ya? Tapi kali ini ngga mungkin ngga sih?
+                Ahhh, push aja sih biar sedikit melepaskan beban 
+                pikiranku ini. Siapa tau, aku bisa lupa yekan.
+                Atau nanti aku hapus lagi aja, kan gampang tinggal 
+                hapus.
             </p>
         </div>
     </div>
