--- a/html/014. Agak Laen (17-05-2024)/agak-laen.html
+++ b/html/014. Agak Laen (17-05-2024)/agak-laen.html
@@ -148,7 +148,7 @@
                 kek, atau temen kkn dia yang cantik, lupa namanya.
             </p>
             <p>
-                Tapi aku ngapain mikirin zancok, mana ini file ini 
+                Tapi aku ngapain mikirin zancok, mana isi file ini 
                 isinya zancok, zancok, zancok lagi. Arghhh, 
                 kenapa sih kayak susah banget untuk menjadikan, 
                 "Zancok adalah teman." Kenapa aku ngga bisa temenan 
