--- a/html/015. Gimana ya (17-05-2024)/gimana-ya.html
+++ b/html/015. Gimana ya (17-05-2024)/gimana-ya.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container theme5">
         <div class="video-section">
-            <video src="gimana-gimana.mp4" autoplay controls loop></video>
+            <video src="HAHAHA.mp4" autoplay controls loop></video>
         </div>
         <div class="text-section text-black">
             <h1>Gimana yaa?</h1>
@@ -44,7 +44,7 @@
                 yekan. Tapi kan temennya dia temenku juga, kayak 
                 temen-temen kampus, temen kita nyaris sama, dan 
                 temen sekelas di dayah juga sama, pasti aku akan 
-                tapi. Apalagi kalo dia nikah sama anak DDM temenku,
+                tau. Apalagi kalo dia nikah sama anak DDM temenku,
                 pasti aku diundang. Hmmm.
             </p>
             <p>
