--- a/html/016. Future plan (18-05-2024)/fp.html
+++ b/html/016. Future plan (18-05-2024)/fp.html
@@ -69,7 +69,11 @@
                 lagi apa ya? Aku lupa. Kemaren pas di kampus 
                 kak jul VN banyak banget, aku sampe pusing
                 hahaha. Coba aku dengerin balik lagi VN nya 
-                deh ya.
+                deh ya. Ehh bukan itu deng, golek, sama manalagi 
+                katanya. Okey kita coba cari dulu. Berarti aku 
+                tambahin satu jenis lagi untuk pengembangan 
+                aplikasinya dulu. Coba aku searching jenis-jenis 
+                mangga deh.
             </p>
         </div>
     </div>
