--- a/html/017. DDM (20-05-2024)/ddm.html
+++ b/html/017. DDM (20-05-2024)/ddm.html
@@ -99,6 +99,36 @@
                 yang ini di sg, satu lagi di sw. Nanti deh, sekarang 
                 mau mandi dulu.
             </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Ahhh, far*ani ngeselin banget, dia pulang udah 
+                sore jadi ngga buka lagi tokonya, dahlah. Mana 
+                udah 2 malam gelap lagi, hmmm. Bener kata Tgk 
+                Anwar, coba aja aku punya cowok, pasti udah aku 
+                minta tolong buat beli sama masangin lampu kamar, 
+                wkwkwk. Pantesan ya aku jomblo, teryata biar ngga 
+                manfaatin orang yah hahaha. Padahal dulu ya, pas 
+                masih sama kakak-kakak bilek yang dulu, malamnya 
+                rusak turun ngaji udah beres. Karena kak Amel 
+                minta tolong sama bang Amar, wkwkwk. Tapi kasian 
+                ngga sih bang Amar, udah baik banget mau diminta 
+                tolong apa aja, akhirnya malah di tolak sama kak 
+                mel. Hmmm, entah kenapa kak mel ngga mau, padahal 
+                bang Amar baik dan ganteng (menurut ceritanya kak 
+                amel loh ya, wahahaha). Ohh iya, kata kak jul bang 
+                Amar punya adek loh, di bileknya zancok.
+            </p>
+            <p>
+                Sebenernya bisa aja sih minta tolong sama bestie.
+                Tapi kenalan aku cuman kawan IT ku aja, wkwkwk. 
+                Si Mu*sal mah golom ta yue ka han item. Kalo 
+                zancok, aku ngga mau nyoba tanya, takut ngga bisa. 
+                Bukannya dia ngga bisa ya, tapi takutnya aku ngga 
+                bisa lupain dia. Bukankah semakin banyak kenangan 
+                = semakin sulit dilupakan?
+            </p>
         </div>
     </div>
 </body>
