--- a/html/018. For real (21-05-2024)/fr.html
+++ b/html/018. For real (21-05-2024)/fr.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container theme5">
         <div class="video-section">
-            <video src="fr.mp4" autoplay controls loop></video>
+            <video src="rough.mp4" autoplay controls loop></video>
         </div>
         <div class="text-section text-black">
             <h1>For real</h1>
@@ -73,6 +73,19 @@
                 Dan sekarang, aku mau memulai hal-hal yang meragukan
                 dan menakutkan lagi. Tapi aku ngga ada temennya, "can you 
                 be my best friend?" Yeah you can, thank you! Hehehe.
+            </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Aku ngga habis pikir, kenapa di saat orang-orang 
+                dapetin hasil klasifikasi yang bagus pake cnn, 
+                modelku malah ngelawak. Tolonglah, ini ngga 
+                lucu ya. 
+            </p>
+            <p>
+                Menunggu sebuah keterangan wkwkwk. 
+                Gelap dikit ngga ngaruh.
             </p>
         </div>
     </div>
