--- a/html/018. For real (21-05-2024)/fr.html
+++ b/html/018. For real (21-05-2024)/fr.html
@@ -87,6 +87,27 @@
                 Menunggu sebuah keterangan wkwkwk. 
                 Gelap dikit ngga ngaruh.
             </p>
+            <p>
+                ....
+            </p>
+            <p>
+                Akuuu. Akuu seneng banget rok nya dipakee. Huhu. 
+                Jadi kan kemaren abis dari sempronya pip*h, udah 
+                jam 3 lebih kan, aku buru-buru mau segera balik 
+                karena mau beli hadiah sempro spesial buat kawanku
+                ini. Itu di krukuh, sampe sana aku udah pusing 
+                banget mau ngado apa, terus aku liatlah rok ini, 
+                jatuh cintaa sama warna rok nya. Cantik banget 
+                anggun kalo di pake. Sebenernya aku juga mau 
+                roknya buat aku, tapi terlalu ngepress, dan kalo 
+                aku yang pake jadinya anu, wkwkwk. Aku udah coba 
+                pake, jadinya terlalu anu. Kalo kawanku ini mah 
+                kurus, jadi dia ngga perlu capek milih outfit, 
+                apa aja bagus di pake. Lah aku, kagak bisa hmm.
+            </p>
+            <p>
+                Sekarang udah ngga gelap lagiii. Alhamdulillah.
+            </p>
         </div>
     </div>
 </body>
