--- a/html/019. Aduh (22-05-2024)/dh.html
+++ b/html/019. Aduh (22-05-2024)/dh.html
@@ -50,6 +50,19 @@
                 Aku belum ngerti struktur kodenya, nanya shat gpt 
                 mulu sih wkwkwk.
             </p>
+            <p>
+                Oke, udah beli obat dan udah aku minum. Saatnya 
+                lanjut lagi. 
+                Barusan pas keluarin motor aku ketemu kak ira, 
+                dia nanya aku kemana, aku bilanglah pusing mau 
+                cari obat. Sampe dia bantuin ngeluarin motorku
+                wkwkwk.
+            </p>
+            <p>
+                Oke, aku harus lanjut lagi sekarang. Walaupun 
+                masih pusing, setidaknya aku udah minum obat 
+                yekann. 
+            </p>
         </div>
     </div>
 </body>
