--- a/html/019. Aduh (22-05-2024)/dh.html
+++ b/html/019. Aduh (22-05-2024)/dh.html
@@ -26,7 +26,7 @@
             </p>
             <p>
                 Mana aku pusing banget, kekurangan hb ngga sih. 
-                Obatku abis, obat tambah darah wkwkwk. AKu biasanya 
+                Obatku abis, obat tambah darah wkwkwk. Aku biasanya 
                 selalu nyetok berbagai macam obat, biar kalo tiba-tiba 
                 sakit disini aku ngga ngerepotin orang, kalo siang 
                 sih bisa nitip sama temenku, tapi kalo tiba-tiba 
@@ -47,7 +47,7 @@
                 Oke, cari obat dulu nisa, biar bisa lebih fokus 
                 ngerjainnya nanti. Aku cuma butuh fokus sedikit 
                 lagi aja, dan aku pasti akan bisa ngerjain ini. 
-                Aku belum ngerti struktur kodenya, nanya shat gpt 
+                Aku belum ngerti struktur kodenya, nanya chat gpt 
                 mulu sih wkwkwk.
             </p>
             <p>
@@ -62,6 +62,49 @@
                 Oke, aku harus lanjut lagi sekarang. Walaupun 
                 masih pusing, setidaknya aku udah minum obat 
                 yekann. 
+            </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Hahahaha. Jadi kan barusan kami ngaji kitab Quratul
+                'Uyun karena gabung sama kakak kelas. Cuman baru 
+                muqaddimah, aku sih sebenernya udah baca sampe 
+                habis terjemahannya jadi kayak senyam-senyum aja 
+                di bale liat orang ini ngaji hahaha. 
+                Sebelumnya, malam minggu kemaren, aku ngerujak bareng
+                di bileknya ri*ka. Terus kayak bahas ngaji kitab ini 
+                sama kawan-kawan bileknya. Aku jadi kepo, sebenernya 
+                sebelumnya aku udah baca terjemahannya, tapi ngga 
+                habis, cuman beberapa halaman. Jadi, karena kemaren 
+                bahas itu, jadilah aku kepo banget isi fullnya gimana,
+                aku baca deh terjemahannya, hahaha. 
+            </p>
+            <p>
+                Astaghfirullah, ampuni hamba yang terlalu kepo ya 
+                Allah.
+            </p>
+            <p>
+                Tapi aku masih penasaran, selain Quratul 'Uyun sama 
+                Fathul izar, ada ngga sih kitab yang isinya kayak 
+                gitu juga? Hmmmm, aku coba cari tau nanti-nanti deh. 
+                Ya ngga papa, kan ilmu, ya ngga sih, hahaha. Nanti 
+                kalo-kalo lupa, ya tinggal baca lagi yekann.
+            </p>
+            <p>
+                Btw, ini cargerku udah ngelunjak lagi, padahal baru 
+                beberapa bulan. Kayaknya mau rusak deh, tadi aja 
+                ngga bisa-bisa. Alhamdulillah akhirnya bisa setelah 
+                menggeser-geser, ngga tau besok gimana. Hmm, oke 
+                karena cargernya agak kurang bersahabat, jadi 
+                gimanapun caranya aku harus selesain ini sebelum 
+                baterai laptopku habis. Ini 94%, oke nisa kita 
+                bisa!
+            </p>
+            <p>
+                Tgk bilang mobil terbang, hmm rasanya emang udah 
+                ada deh. Mungkin 5 atau 10 tahun lagi di Aceh juga 
+                akan banyak tuh mobil beterbangan. 
             </p>
         </div>
     </div>
