--- a/html/020. First Step (23-06-2024)/fs.html
+++ b/html/020. First Step (23-06-2024)/fs.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container theme5">
         <div class="video-section">
-            <video src="fs.mp4" autoplay controls loop></video>
+            <video src="ss.mp4" autoplay controls loop></video>
         </div>
         <div class="text-section text-black">
             <h1>First Step</h1>
@@ -49,6 +49,22 @@
                 Hmmm, empat sehat lima puluh juta untuk tahun ini, 
                 apakah seenggak mungkin itu? Hmmm, di coba dulu, 
                 kalo ngga dicoba mah ngga akan pernah tauu yekann.
+            </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Arghhh, siapa sih yang bikin standar kecantikan harus 
+                putih, mancung, mata belo, alis tebal, pipi tirus, 
+                aku kan jadinya ngga masuk. Arghhh, kenapa ya aku 
+                ngga bisa mencintai diriku sendiri, kok orang-orang 
+                bisa ya suka dan mencintai dirinya. Aku kok kagak 
+                bisa-bisa ya.
+            </p>
+            <p>
+                Tapi, hmm maaf deh aku up tiktok, tapi aku harus 
+                sering melihat mukaku biar aku bisa belajar selflove. 
+                I LOVE ME, I MUST ALWAYS AND ALWAYS LOVING MYSELF.
             </p>
         </div>
     </div>
