--- a/html/021. Future (24-05-2024)/ft.html
+++ b/html/021. Future (24-05-2024)/ft.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container theme5">
         <div class="video-section">
-            <video src="ft.mp4" autoplay controls loop></video>
+            <video src="ftr.mp4" autoplay controls loop></video>
         </div>
         <div class="text-section text-black">
             <h1>Future</h1>
