--- a/html/021. Future (24-05-2024)/ft.html
+++ b/html/021. Future (24-05-2024)/ft.html
@@ -77,6 +77,71 @@
                 Tuh kan, carger aja bisa saling melengkapi, masak 
                 kita enggak sih, hahahaha.
             </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Biar cerita kita nyambung, aku mau lanjut kasih 
+                epilog. Hmm, bener tebakanku, pasti salah satu, 
+                kalo ngga In*an ya sa*ri. Cewek itu ngga mungkin 
+                ngasih feedback kalo ngga dapat effort, yekann.
+            </p>
+            <p>
+                Menurut kamu gimana? Buang-buang waktu ngga sih 
+                mengizinkan diri kita untuk mikirin orang yang 
+                dasarnya emang ngga peduli sama kita? Dan jujur, 
+                aku sendiri kadang ngerasa risih kalo ada orang 
+                yang aku ngga bisa punya perasaan sama dia ada 
+                melakukan something buat aku, ngga enak karena 
+                aku ngga bisa bales perasaannya. Dan mungkin 
+                zancok temenku ini juga gitu kali yah. Jadi ya, 
+                aku anggap aja temen, ngga usah ganggu-ganggu 
+                dan nyebut orangnya lagi yekann.
+            </p>
+            <p>
+                Dan jujur sih, ada yang masih aku penasaranin 
+                banget, apakah itu dia? Tapi masak tiba-tiba tau 
+                ayahku sakit, dan masak serandom itu nanya tanpa 
+                tau apa-apa? Hmm, pasti dia nih, ngga salah lagi.
+                Tapii, emang aku se-second choice itu ya? Sampe 
+                pake nomer lain. Tapi biasanya emang gitu ngga 
+                sih, yang aku tau temen-temenku yang pacaran tuh 
+                sering gitu, kayak share-screen hpnya. Makanya 
+                pake second, biar aman hahaha. Untung aku paham 
+                triknya.
+            </p>
+            <p>
+                Sebenernya ya, dulu aku pernah di fase nungguin dia 
+                maju, tapi ngga orangnya ngga maju-maju kayak moonwalk, 
+                wkwkwk. Cuman yah, akhir-akhir juli tahun lalu aku 
+                jadi paham, bukan aku yang dia mau, karena itu 
+                aku kayak bener-bener set my boundaries untuk tidak 
+                melebih-lebihkan apapun lagi. Kayak, aku jadi first 
+                choicenya orang aja belum tentu akunya mau, masak 
+                menjadi second choicenya aku mau? Mungkin bukan 
+                second sih, bisa jadi fourth atau eleventh, yekan.
+                Dan aku juga tidak sebodoh itu.
+            </p>
+            <p>
+                I know my worth, dan aku cuman mau sama orang yang 
+                beneran tulus sama aku. Dan ngga ada negosiasi 
+                disini. Sebagaimana pembahasanku di atas, aku butuh 
+                orang yang mau fight bareng sama aku, dan hal itu 
+                ngga akan terwujud kalo cowoknya setengah-setengah.
+                Intinya tuh kayak, temukan orang yang benar-benar 
+                mau memperjuangkan kita dan yang cintanya lebih 
+                besar daripada cewek, hahaha. 
+            </p>
+            <p>
+                Dan daripada memikirkan milik orang lain, lebih baik 
+                memperbaiki diri dan fokus mengejar cita-cita lebih 
+                dahulu. Karena yang sudah Allah takdirkan, tidak 
+                akan diambil orang.
+            </p>
+            <p>
+                Oke, bentar lagi ngaji nih, aku harus fokus, waktuku 
+                disini kurang dari sebulan lagi.
+            </p>
         </div>
     </div>
 </body>
