--- a/html/021. Future (24-05-2024)/ft.html
+++ b/html/021. Future (24-05-2024)/ft.html
@@ -94,8 +94,8 @@
                 yang aku ngga bisa punya perasaan sama dia ada 
                 melakukan something buat aku, ngga enak karena 
                 aku ngga bisa bales perasaannya. Dan mungkin 
-                zancok temenku ini juga gitu kali yah. Jadi ya, 
-                aku anggap aja temen, ngga usah ganggu-ganggu 
+                zancok temenku ini ngerasa gitu juga kali yah. 
+                Jadi ya, aku anggap aja temen, ngga usah ganggu-ganggu 
                 dan nyebut orangnya lagi yekann.
             </p>
             <p>
@@ -112,7 +112,7 @@
             </p>
             <p>
                 Sebenernya ya, dulu aku pernah di fase nungguin dia 
-                maju, tapi ngga orangnya ngga maju-maju kayak moonwalk, 
+                maju, tapi orangnya ngga maju-maju kayak moonwalk, 
                 wkwkwk. Cuman yah, akhir-akhir juli tahun lalu aku 
                 jadi paham, bukan aku yang dia mau, karena itu 
                 aku kayak bener-bener set my boundaries untuk tidak 
