--- a/html/021. Future (24-05-2024)/ft.html
+++ b/html/021. Future (24-05-2024)/ft.html
@@ -142,6 +142,23 @@
                 Oke, bentar lagi ngaji nih, aku harus fokus, waktuku 
                 disini kurang dari sebulan lagi.
             </p>
+            <p>
+                ....
+            </p>
+            <p>
+                Aku setuju dengan penjelasan disini. Sebagai orang 
+                yang berusaha dewasa menyikapi diri sendiri, aku 
+                sudah melakukannya tahun lalu. Tapi emang responnya 
+                anyep, bukan ke aku malah ke cewek lain. It's oke, 
+                dan aku juga udah tahu jawabannya dari tahun lalu. 
+                Isn't me, and is always not me. Itu tidak pernah 
+                aku, dan aku selalu tau itu. 
+            </p>
+            <p>
+                Tapi karena kemaren aku ngga pernah berani bikin 
+                epilog, it's time, ini epilognya yah. Good night!
+                And have a nice dream!
+            </p>
         </div>
     </div>
 </body>
