--- a/html/022. Aib (25-05-2024)/ib.html
+++ b/html/022. Aib (25-05-2024)/ib.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container theme5">
         <div class="video-section">
-            <video src="ftr.mp4" autoplay controls loop></video>
+            <video src="ib.mp4" autoplay controls loop></video>
         </div>
         <div class="text-section text-black">
             <h1>Tell</h1>
@@ -70,6 +70,12 @@
                 kaca mata. Dan faktanya yah, kalopun kami pake 
                 kaca mata ngeliatnya itu ngga sebagus dan setajam 
                 orang yang matanya normal.
+            </p>
+            <p>
+                ...
+            </p>
+            <p>
+                Hmm hmm.
             </p>
         </div>
     </div>
