--- a/html/022. Aib (25-05-2024)/ib.html
+++ b/html/022. Aib (25-05-2024)/ib.html
@@ -77,6 +77,37 @@
             <p>
                 Hmm hmm.
             </p>
+            <p>
+                Tadi pas ngaji, ada pembahasan kalo seorang yang 
+                orang tuanya punya penyakit kayak aib di atas juga 
+                ngga sekufu sama orang yang sehat. Aku jadi mikir 
+                kayak, emang se-wow itu ngga sih ulama terdahulu?
+                Sampe semua penerapa ilmu tuh ada di satu ilmu 
+                yaitu fiqah. Kan masalah gen-gen yang di turunkan 
+                dari orang tua itu di biologi, hibridasi. Orangtua 
+                yang mengidap suatu penyakit keturunan bisa menurunkan 
+                gen itu pada anaknya. Bisa jadi si anak sakit juga, 
+                atau si anak bawa gen resesif yang juga bisa berimbas 
+                ke keturunan si anak selanjutnya.
+            </p>
+            <p>
+                Dulu kan orang islam tuh pinter-pinter banget, dan 
+                dalam sejarah menjadi kaum yang menguasai dunia waktu 
+                era keemasannya. Dan pas masa-masa itu juga banyak 
+                perpustakaan, dan banyak banget tulisan bahasa asing 
+                yang diterjemahin ke bahasa arab untuk dipelajari. 
+                Pas masa Harun Ar-Rasyid ngga sih. Keren, keren, 
+                emang ngga ada habisnya belajar ilmu-ilmu agama ini, 
+                pasti akan ada aja hal-hal yang buat kagum. Maasya 
+                Allah.
+            </p>
+            <p>
+                Jadi pengen balik ke masa dulu ngga sihh, wkwkwk. 
+                Tapi kan ngga mungkin. Hmm, tapi aku pengen deh 
+                ke Istanbul, mau liat-liat aja, penasaran, hahaha.
+                Kan ada masih banyak tuh peninggalan-peninggalan 
+                di Turkey. Ya Allah, pengen ke Turkey ya Allah.
+            </p>
         </div>
     </div>
 </body>
